--- a/templates/result.html
+++ b/templates/result.html
@@ -39,7 +39,7 @@
     <div class="footer-copyright light-green lighten-1">
       <div class=""  style="padding-bottom: 1rem; position: fixed; font-size: 1.2rem; margin-left: 5rem;">
         <p>&copy; Saket Garodia</p>
-        <p>saketgarodia1@gmail.com</p>
+        <p>lijisaravarghese7@gmail.com</p>
       </div>
     </div>
   </footer>
